# town_clock

./: .coveragerc  .gitignore  README.md  TownClock.service  convert_to_time.py  main.py  program.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_rpi.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
Town_Clock/: __init__.py  __main__.py  controller.py
Town_Clock/clock/: __init__.py  data.py  mechanism.py  relay.py
Town_Clock/ui/: __init__.py  lcd_screen.py
Town_Clock/util/: __init__.py  location_sunrise_sunset.py  logging.py  utils.py
clock_log/: log.csv
config/: config.toml
docs/: index.md
src/Town_Clock/: GPS.py  Relay.py  __init__.py  clock_controller.py  clock_data.py  clock_enums_exceptions.py  clock_input_screen.py  clock_logging.py  clock_mechanism.py  controller.py  data.py  enums_exceptions.py  input_screen.py  location_sunrise_sunset.py  logging.py  mechanism.py  program.py  relay.py
src/Town_Clock copy/: clock_controller.py  clock_data.py  clock_enums_exceptions.py  clock_logging.py  clock_mechanism.py  relay.py
src/Town_Clock/clock_log/: pulse.log.1  pulse.log.2  pulse.log.3  pulse.log.4  pulse.log.5  pulse.log.6  pulse.log.7  temperature.csv
src/i2c_LCD/: I2CLCD.py  I2CLCD1602.py  PCF8574.py
tests/: test_program.py
