[tool.poetry]
name = "town-clock"
version = "1.0.1"
description = "An application that runs a raspberry pi based town clock."
authors = ["Zack Hankin <zthankin@gmail.com>"]
license = "MIT"
readme = "docs/index.md"
packages = [{ include = "town_clock" }]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
icecream = "^2.1.3"
skyfield = "^1.45"
pytz = "^2022.7.1"
timezonefinder = "^6.1.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poetry = "^1.3"
pytest = "^7.2.1"
black = "^22.12.0"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
