[metadata]
name = Town_Clock
version = 1.0.0
description = Runs a town clock using a Raspberry Pi and a GPS for time accuracy. 
author = Zack Hankin
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    Town_Clock
install_requires =
    adafruit-circuitpython-charlcd>=3.4.6
    numpy>=1.21
    pandas>=1.3
    pytz>=2021.3
    RPi.GPIO>=0.7.1
    skyfield>=1.40
    timezonefinder>=5.2.0
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.9
    mypy>=0.910
    pytest-cov>=2.0
    pytest>=6.0
    tox>=3.24

[options.package_data]
Town_Clock = py.typed

[flake8]
max-line-length = 160
